@@ -602,7 +602,7 @@ rangedTypes = d2({
 })
 
 spares = ('Belt', 'Cloak', 'Jewelry', 'Necklass', 
-          'Ring', 'Wrist', 'Mythical',)
+          'Ring', 'Wrist', 'Mythrian',)
 
 spareTypes = d2({
     'Albion':   t2(twohandTypes['Albion']   + rangedTypes['Albion'][:-4]
@@ -624,7 +624,7 @@ ItemTypes = d2({
     'Right Ring':  t2(('Ring',)),
     'Left Wrist':  t2(('Wrist',)),
     'Right Wrist': t2(('Wrist',)),
-    'Mythical':    t2(('Mythical',)),
+    'Mythical':    t2(('Mythrian',)),
 
     'Chest':       armorTypes,
     'Arms':        armorTypes,
