@@ -1394,7 +1394,7 @@ class ScWindow(QMainWindow, Ui_B_SC):
                     amts['TotalBonus'] += amount
                     amts['Bonus'] = min(amts['TotalBonus'], 
                                         amts['BaseCap'])
-                elif gemtype == 'Resist Cap' and key == 'Mythical':
+                elif gemtype == 'Resist Cap' and item.TYPE == 'Mythrian':
                     amts = tot['Resists'][effect]
                     amts['BaseCap'] += amount
                     amts['Bonus'] = min(amts['TotalBonus'], 
@@ -1420,7 +1420,7 @@ class ScWindow(QMainWindow, Ui_B_SC):
                     for effect in effects:
                         amts = tot['Stats'][effect]
                         amts['TotalCapBonus'] += amount
-                        if key == 'Mythical':
+                        if item.TYPE == 'Mythrian':
                             amts['BaseCapToCapBonus'] += amount
                         amts['CapBonus'] = min(amts['TotalCapBonus'],
                                                amts['BaseCapToCapBonus'])
@@ -1435,7 +1435,7 @@ class ScWindow(QMainWindow, Ui_B_SC):
                     elif tot['OtherBonuses'].has_key(effect):
                         amts = tot['OtherBonuses'][effect]
                         amts['TotalBonus'] += amount
-                        if key == 'Mythical':
+                        if item.TYPE == 'Mythrian':
                             amts['BaseCap'] += amount
                         amts['Bonus'] = min(amts['TotalBonus'], 
                                             amts['BaseCap'])
@@ -1449,7 +1449,7 @@ class ScWindow(QMainWindow, Ui_B_SC):
                         amts['BaseCap'] = int(charlevel * capcalc[0]) \
                                         + capcalc[1]
                         amts['TotalBonus'] = amount
-                        if key == 'Mythical':
+                        if item.TYPE == 'Mythrian':
                             amts['BaseCap'] += amount
                         amts['Bonus'] = min(amts['TotalBonus'], amts['BaseCap'])
                 elif gemtype == 'PvE Bonus':
